--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="img\favicon.png">
     <title>Projeto layout Ristorante</title>
     <link rel="stylesheet" href="css\estilos.css">
+
 </head>
 <body>
     <header>
@@ -59,8 +60,12 @@
                 <br>
                 <button type="submit" id="enviar">Enviar Formulário</button>
         </form>
+        <button onclick="copia_cola()">copia e cola</button>
         </div>
         <div id="form_dir">
+            <div id="contato_img">
+
+            </div>
 
         </div>
         
@@ -74,5 +79,8 @@
 
 
     </footer>
+
+    <script src="./js/codigo.js"></script>
+
 </body>
 </html>
