--- a/contato.html
+++ b/contato.html
@@ -32,6 +32,7 @@
     </header>
     <main>
         <h1>Contato</h1>
+        <button onclick="media_notas()">calula média</button>
         <section id="form_main">
         
         <div id="form_esq">
@@ -44,6 +45,10 @@
             <br>
             <label for="phone">Numero de telefone:</label>
             <input type="number" id="phone" name="phone">
+            <br>
+            <input type="number" id="nota1" placeholder="Nota 1">
+            <input type="number" id="nota2" placeholder="Nota 2">
+            <input type="number" id="nota3" placeholder="Nota 3">
             <br>
             <label for="check">Li e aceito as políticas de privacidade</label>
             <input type="checkbox" id="check" name="check" required>
@@ -74,7 +79,7 @@
     <footer>
 
         <h2>
-            Giovani Xiscatti 
+            <!--Tag é um comando de instrução-->
         </h2>
 
 
